<resources>
    <string name="app_name">Lab2</string>

    <string name="settings">Настройки</string>
    <string name="font_size">Стиль для шрифта</string>
    <string name="sets_font_size">Устанавливает стиль для шрифта</string>
    <string name="select_font_size">Выберите стиль для шрифта</string>
    <string name="select_language">Выберите язык</string>
    <string name="app_language">Язык в приложении</string>
    <string name="language">Язык</string>
    <string name="dark_theme">Ночная тема</string>
    <string name="turn_on">Включить</string>
    <string name="turn_off">Включить</string>
    <string name="delete">Удалить</string>
    <string name="delete_all">Удалить все </string>
    <string name="splash_footer">Designed by Your Name Here</string>

    <string-array name="language">
        <item>Русский</item>
        <item>English</item>
    </string-array>

    <string-array name="language_alias">
        <item>"ru"</item>
        <item>"en"</item>
    </string-array>

    <string-array name="text_scale">
        <item>Малый</item>
        <item>Нормальный</item>
        <item>Большой</item>
    </string-array>

    <string-array name="text_scale_alias">
        <item>0.85</item>
        <item>1.0</item>
        <item>1.15</item>
    </string-array>

    <string name="add_string">+</string>
    <string name="work">Работа</string>
    <string name="preparation">Подготовка</string>
    <string name="rest">Отдых</string>
    <string name="start">Старт</string>
    <string name="pause">Пауза</string>
    <string name="finish">Финиш</string>
    <string name="name">Название</string>
    <string name="cycle">Циклы</string>
    <string name="set">Сеты</string>
    <string name="Sleep">Успокоиться</string>
    <string name="rest_between">Отдых между подходами</string>
    <string name="quit_message">Вы хотите выйти из тренировки?</string>
    <string name="cancel_timer_message">Вы хотите прекратить создание таймера?</string>
    <string name="save_message">Вы хотите прекратить редактирование таймера и сохранить его?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="cancel">Отмена</string>
    <string name="save">Сохранить</string>
    <string name="workout">Тренировка</string>
    <string name="minus">-</string>

    <string name="workout_completed">Тренировка завершена</string>
    <string name="TIME">ВРЕМЯ</string>
    <string name="STEP">ЭТАП</string>
</resources>