<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:titleTextColor="@color/colorTextHeader"
    android:background="@color/colorBackground"
    tools:context=".CreateActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:label="@string/app_name"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/AppTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="@string/app_name"
        app:titleTextColor="@color/colorText" >

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:layout_editor_absoluteX="-2dp">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">


            <TextView
                android:id="@+id/textViewTimer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/workout"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textAlignment="center"
                android:textColor="@color/colorText" />


            <EditText
                android:id="@+id/input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                android:textColorHighlight="@color/colorText"
                android:textColorHint="@color/colorPrimary"
                android:textColorLink="@color/colorText"
                android:textCursorDrawable="@color/colorPrimaryDark" />


            <TextView
                android:id="@+id/textViewPrep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/preparation"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/colorText" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_prepare"
                    app:tint="@color/colorPrimary" />

                <ImageButton
                    android:id="@+id/btn_prepare_plus"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:tint="@color/colorWhite"
                    android:background="@drawable/state_pressed_ripple"
                    app:srcCompat="@drawable/ic_add" />

                <EditText
                    android:id="@+id/input_prep"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:focusable="false"
                    android:gravity="center_horizontal"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary" />

                <ImageButton
                    android:id="@+id/btn_prepare_minus"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="60dp"
                    android:tint="@color/colorWhite"
                    android:background="@drawable/state_pressed_ripple"
                    app:srcCompat="@drawable/ic_minus" />
            </LinearLayout>

            <TextView
                android:id="@+id/textViewWork"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/work"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/colorText"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_work"
                    app:tint="@color/colorPrimary" />

                <ImageButton
                    android:id="@+id/btn_work_plus"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:tint="@color/colorWhite"
                    android:background="@drawable/state_pressed_ripple"
                    app:srcCompat="@drawable/ic_add" />

                <EditText
                    android:id="@+id/input_work"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:focusable="false"
                    android:gravity="center_horizontal"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary" />

                <ImageButton
                    android:id="@+id/btn_work_minus"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="60dp"
                    android:tint="@color/colorWhite"
                    android:background="@drawable/state_pressed_ripple"
                    app:srcCompat="@drawable/ic_minus" />
            </LinearLayout>

            <TextView
                android:id="@+id/textViewRest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/rest"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/colorText"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_rest"
                    app:tint="@color/colorPrimary" />

                <ImageButton
                    android:id="@+id/btn_rest_plus"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:tint="@color/colorWhite"
                    android:background="@drawable/state_pressed_ripple"
                    app:srcCompat="@drawable/ic_add" />

                <EditText
                    android:id="@+id/input_rest"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:focusable="false"
                    android:gravity="center_horizontal"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"/>

                <ImageButton
                    android:id="@+id/btn_rest_minus"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="60dp"
                    android:tint="@color/colorWhite"
                    android:background="@drawable/state_pressed_ripple"
                    app:srcCompat="@drawable/ic_minus" />
            </LinearLayout>

            <TextView
                android:id="@+id/textCycleRest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/cycle"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/colorText" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_loop"
                    app:tint="@color/colorPrimary" />

                <ImageButton
                    android:id="@+id/btn_cycle_plus"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:tint="@color/colorWhite"
                    android:background="@drawable/state_pressed_ripple"
                    app:srcCompat="@drawable/ic_add" />

                <EditText
                    android:id="@+id/input_cycle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:focusable="false"
                    android:gravity="center_horizontal"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary" />

                <ImageButton
                    android:id="@+id/btn_cycle_minus"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="60dp"
                    android:tint="@color/colorWhite"
                    android:background="@drawable/state_pressed_ripple"
                    app:srcCompat="@drawable/ic_minus" />
            </LinearLayout>

            <TextView
                android:id="@+id/textSetRest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/set"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/colorText" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_set"
                    app:tint="@color/colorPrimary" />

                <ImageButton
                    android:id="@+id/btn_set_plus"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:tint="@color/colorWhite"
                    android:background="@drawable/state_pressed_ripple"
                    app:srcCompat="@drawable/ic_add" />

                <EditText
                    android:id="@+id/input_set"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:focusable="false"
                    android:gravity="center_horizontal"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"/>

                <ImageButton
                    android:id="@+id/btn_set_minus"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="60dp"
                    android:tint="@color/colorWhite"
                    android:background="@drawable/state_pressed_ripple"
                    app:srcCompat="@drawable/ic_minus" />
            </LinearLayout>

            <TextView
                android:id="@+id/textCalmRest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/Sleep"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/colorText"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_rest"
                    app:tint="@color/colorPrimary" />

                <ImageButton
                    android:id="@+id/btn_calm_plus"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:tint="@color/colorWhite"
                    android:background="@drawable/state_pressed_ripple"
                    app:srcCompat="@drawable/ic_add" />

                <EditText
                    android:id="@+id/input_calm"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:focusable="false"
                    android:gravity="center_horizontal"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary" />

                <ImageButton
                    android:id="@+id/btn_calm_minus"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="60dp"
                    android:tint="@color/colorWhite"
                    android:background="@drawable/state_pressed_ripple"
                    app:srcCompat="@drawable/ic_minus" />
            </LinearLayout>

            <TextView
                android:id="@+id/textColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="Цвет"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/colorText" />


            <codes.side.andcolorpicker.hsl.HSLColorPickerSeekBar
                android:id="@+id/color_picker"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hslColoringMode="pure"
                app:hslMode="hue" />

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:textAlignment="center">

                <Button
                    android:id="@+id/btn_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:background="@color/colorAccent"
                    android:text="@string/cancel"
                    android:textColor="@color/colorWhite" />

                <Button
                    android:id="@+id/btn_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/save"
                    android:background="@color/colorAccent"
                    android:textColor="@color/colorWhite"
                    tools:ignore="MissingConstraints" />

            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="100dp"
                android:textColor="@color/colorPrimary"/>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>